# GenSound

./: CMakeLists.txt  README.md  TODO.md
scripts/: fm_bass.cpp  gated_pad.cpp  kick.cpp  pluck.cpp  simple_sine.cpp  snare.cpp
sdk/: GenSoundSDK.h  GenSynthSDK.h
source/: PluginProcessor.cpp  PluginProcessor.h
source/audio/: Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
source/compile/: CompileDiagnostics.cpp  CompileDiagnostics.h  ExternalCompiler.cpp  ExternalCompiler.h  FileWatcher.cpp  FileWatcher.h  ScriptManager.cpp  ScriptManager.h
source/loader/: DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  ScriptVersion.h
source/scripting/: ScriptingTypes.h
source/ui/: PluginEditor.cpp  PluginEditor.h
